# dissolve-derive

./: CHANGELOG.md  Cargo.toml  README.md
src/: lib.rs
tests/: compile_fail_tests.rs  integration_tests.rs
tests/compile_fails/: all_fields_skipped.rs  all_fields_skipped.stderr  dissolve_bare_attribute.rs  dissolve_bare_attribute.stderr  dissolve_path_syntax.rs  dissolve_path_syntax.stderr  dissolved_struct_visibility.rs  dissolved_struct_visibility.stderr  empty_attribute.rs  empty_attribute.stderr  empty_rename.rs  empty_rename.stderr  invalid_identifier_rename.rs  invalid_identifier_rename.stderr  invalid_visibility.rs  invalid_visibility.stderr  name_value_syntax.rs  name_value_syntax.stderr  skip_and_rename.rs  skip_and_rename.stderr  tuple_ranme.rs  tuple_ranme.stderr  unknown_container_option.rs  unknown_container_option.stderr  unknown_option.rs  unknown_option.stderr  visibility_non_string.rs  visibility_non_string.stderr
