[package]
name = "dissolve-derive"
version = "0.1.0-pre"
edition = "2024"
description = "derive macro for creating dissolved structs with public fields and optional field renaming"
readme = "README.md"
repository = "https://github.com/rotorship/dissolve-derive"
license = "MIT OR Apache-2.0"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full", "extra-traits"] }
quote = "1"
proc-macro2 = "1"

[dev-dependencies]
trybuild = "1"
